--- a/app/src/main/res/drawable/spinner_lay.xml
+++ b/app/src/main/res/drawable/spinner_lay.xml
@@ -3,7 +3,7 @@
     <solid android:color="@android:color/transparent" />
     <corners android:radius="1dp" />
     <solid
-        android:color="@color/yellow"
+        android:color="@color/ash"
         />
     <stroke
         android:width="1dp"
