--- a/app/src/main/res/layout/fragment_activity.xml
+++ b/app/src/main/res/layout/fragment_activity.xml
@@ -2107,11 +2107,12 @@
                 android:layout_height="@dimen/text_box_height"
                 android:layout_marginTop="16dp"
                 android:gravity="center"
-                android:text="01772784820"
+                android:text=""
                 android:textColor="@color/black"
                 android:textSize="@dimen/_12ssp"
                 android:textStyle="bold"
-                android:visibility="visible"
+                android:visibility="gone"
+                android:freezesText="true"
                 app:layout_constraintEnd_toStartOf="@+id/call_btn"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/others_cardview" />
@@ -2122,7 +2123,7 @@
                 android:layout_height="wrap_content"
                 android:text="Call"
                 android:textColor="@color/white"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/text_mobile_number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/text_mobile_number"
@@ -2136,7 +2137,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Get Details"
                 android:textAllCaps="false"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:textColor="@color/white"
                 app:layout_constraintEnd_toEndOf="@+id/call_btn"
                 app:layout_constraintStart_toStartOf="@+id/text_mobile_number"
@@ -2148,7 +2149,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:visibility="visible"
+                android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/get_details_btn">
@@ -2163,9 +2164,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Call types: outgoing"
+                        android:text="Call types: "
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12ssp"
+                        android:freezesText="true"
                         app:layout_constraintBottom_toTopOf="@+id/call_time"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.2"
@@ -2177,9 +2179,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
-                        android:text="Call time: 2021-01-23 15:02:07"
+                        android:text="Call time: "
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12ssp"
+                        android:freezesText="true"
                         app:layout_constraintBottom_toTopOf="@+id/call_duration"
                         app:layout_constraintStart_toStartOf="@+id/call_types"
                         app:layout_constraintTop_toBottomOf="@+id/call_types" />
@@ -2190,9 +2193,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:layout_marginBottom="8dp"
-                        android:text="Call duration: 0:0:15"
+                        android:text="Call duration: "
                         android:textColor="@color/black"
                         android:textSize="@dimen/_12ssp"
+                        android:freezesText="true"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/call_time"
                         app:layout_constraintTop_toBottomOf="@+id/call_time" />
