--- a/app/src/main/res/layout/splash_activity.xml
+++ b/app/src/main/res/layout/splash_activity.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:background="@color/black_red"
     tools:context=".MainActivity" >
-
+<!--
     <ImageView
         android:id="@+id/iv"
         android:layout_width="@dimen/_80sdp"
@@ -29,8 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv" />
-
-    <TextView
+        <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -38,7 +37,18 @@
         android:layout_marginBottom="8dp"
         android:text="@string/version"
         android:textColor="@color/white"
+        android:elevation="@dimen/_5sdp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+-->
+
+
+
+
+<androidx.appcompat.widget.AppCompatImageView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/leaflet"
+    />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
