--- a/app/src/main/res/xml/fragment_profile_scene.xml
+++ b/app/src/main/res/xml/fragment_profile_scene.xml
@@ -47,6 +47,7 @@
             motion:layout_constraintTop_toBottomOf="@+id/text_name"
             android:id="@+id/txtTeam"
             android:layout_marginTop="8dp"
+            android:visibility="gone"
             motion:layout_constraintStart_toStartOf="@+id/text_name" />
         <Constraint
             android:layout_height="wrap_content"
@@ -108,6 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:id="@+id/txtTeam"
+            android:visibility="gone"
             motion:layout_constraintTop_toTopOf="parent"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toEndOf="@+id/profile_image"
